Fixed space inputs, star overlap, added click/shake prompt
The click to shake prompt does not completely fade when it is clicked on.

--- a/8-ball/Stable/Styles/style.css
+++ b/8-ball/Stable/Styles/style.css
@@ -86,8 +86,8 @@ body::before {
   z-index: -1;
 }
 
-/* Position the response such that it is in the white square on the 8-ball */
-#response {
+/* Position the click prompt and response to be in the white square on the 8-ball */
+#response, #clickPrompt {
     position: absolute;
     top: 35%;
     left: 49%;
@@ -100,12 +100,43 @@ body::before {
     width: 25%;
 }
 
+/* Define removal of the click to shake prompt */
+@keyframes clickToShakePrompt {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    display: none;
+    /* visibility: hidden; */
+    /* z-index: -10; */
+  }
+}
+
+/* Apply fade out to the click to shake prompt */
+.prompter {
+  font-family: 'Gothic', sans-serif;
+  font-size: 36px;
+  color: black;
+  animation: clickToShakePrompt 5s;
+}
+
 /* Define the shake animation */
 @keyframes shake {
-  0% { transform: translate(0, 0); }
-  10%, 30%, 50%, 70%, 90% { transform: translate(-10px, 0); }
-  20%, 40%, 60%, 80% { transform: translate(10px, 0); }
-  100% { transform: translate(0, 0); }
+  0% { 
+    transform: translate(0, 0); 
+  }
+  10%, 30%, 50%, 70%, 90% { 
+    transform: translate(-10px, 0); 
+  }
+  20%, 40%, 60%, 80% { 
+    transform: translate(10px, 0); 
+  }
+  100% { 
+    transform: translate(0, 0); 
+  }
 }
 
 /* Animating answers to fade in after shaking */
@@ -124,6 +155,7 @@ body::before {
   }
 }
 
+/* Apply mystical behavior to responses */
 .mystical {
   animation: mystical-text 5s ease-in-out;
   font-family: 'Gothic', sans-serif;
@@ -160,6 +192,7 @@ the response with respect to the container */
   width: 2px;
   height: 2px;
   border-radius: 50%;
+  z-index: -10;
   opacity: 0;
   background-color: #FFF;
   animation: starAnimation 5s linear infinite;
